@@ -190,17 +190,17 @@ public abstract class AbstractOptions implements IOptions, Serializable {
 
     protected void addOption(IBasicOptionGroup group, String name,
             boolean defaultValue) {
-        addOption(group, name, IOption.BOOLEAN, new Boolean(defaultValue));
+        addOption(group, name, IOption.BOOLEAN, Boolean.valueOf(defaultValue));
     }
 
     protected void addOption(IBasicOptionGroup group, String name,
             int defaultValue) {
-        addOption(group, name, IOption.INTEGER, new Integer(defaultValue));
+        addOption(group, name, IOption.INTEGER, Integer.valueOf(defaultValue));
     }
 
     protected void addOption(IBasicOptionGroup group, String name,
             float defaultValue) {
-        addOption(group, name, IOption.FLOAT, new Float(defaultValue));
+        addOption(group, name, IOption.FLOAT, Float.valueOf(defaultValue));
     }
 
     protected void addOption(IBasicOptionGroup group, String name, Vector<String> defaultValue) {
